<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".donor.registation.EnterOTPPage"
    android:background="@color/theme"
    android:gravity="center"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:src="@drawable/loginlogoimg" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/otp_verification"
        android:textSize="30sp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_10_digit_mobile_number"
        android:textSize="21sp"
        android:layout_marginTop="18dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="330dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/background_box">



        <EditText
            android:id="@+id/inputNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/my_number"
            android:background="@null"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:inputType="number"
            android:maxLength="10"
            android:maxLines="1"/>

    </LinearLayout>
    
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/get_otp"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/get_otp"
            android:layout_gravity="center"/>
        
        <ProgressBar
            android:id="@+id/loginPro"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
        
    </FrameLayout>

    


</LinearLayout>