<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff5252"
    android:scrollbars="none"
    android:overScrollMode="never">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/imgLogo"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:src="@drawable/otp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/otp_verification"
            android:textSize="30sp"
            android:layout_marginTop="18dp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_otp_here"
            android:textColorHint="@color/white"
            android:textSize="21sp"
            android:layout_marginTop="9dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/extraMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="21sp"
            android:textColor="@color/black"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal"
            android:gravity="center">

            <EditText
                android:id="@+id/input1"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/input2"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/input3"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/input4"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/input5"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionNext"
                android:maxLength="1"
                android:maxLines="1"/>

            <EditText
                android:id="@+id/input6"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:background="@drawable/otp_box"
                android:layout_marginEnd="10dp"
                android:inputType="number"
                android:textAlignment="center"
                android:imeOptions="actionDone"
                android:maxLength="1"
                android:maxLines="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@null"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/resendOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"
                android:visibility="gone"/>

            <TextView
                android:id="@+id/countdownTimer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="17sp"
                android:textAlignment="viewEnd"
                android:layout_marginEnd="20dp"
                android:textStyle="bold"/>

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/validateotpbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Validate OTP"
                android:layout_gravity="center"/>

            <ProgressBar
                android:id="@+id/progressbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone"/>

        </FrameLayout>

    </LinearLayout>

</ScrollView>